# samvit

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  dependabot.yaml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_add_policies.py
backend/app/: main.py
backend/app/ai/: __init__.py
backend/app/ai/agents/: __init__.py  base.py  hr_assistant.py  router.py  tools.py
backend/app/ai/agents/langgraph/: leave_workflow.py  routes.py
backend/app/ai/agents/pydantic_ai/: __init__.py  hr_agent.py  policy_agent.py
backend/app/ai/rag/: __init__.py  document_loader.py  embeddings.py  rag_service.py  vectorstore.py
backend/app/core/: __init__.py  audit.py  cache.py  config.py  database.py  deps.py  exceptions.py  logging.py  middleware.py  rate_limit.py  redis.py  sanitization.py  security.py  tenancy.py  token_blacklist.py
backend/app/modules/: __init__.py
backend/app/modules/attendance/: __init__.py  models.py  routes.py  schemas.py  service.py
backend/app/modules/audit/: __init__.py  routes.py  schemas.py  service.py
backend/app/modules/auth/: __init__.py  models.py  routes.py  schemas.py  service.py
backend/app/modules/employees/: __init__.py  models.py  repository.py  routes.py  schemas.py  service.py
backend/app/modules/leave/: __init__.py  models.py  routes.py  schemas.py  service.py
backend/app/modules/payroll/: __init__.py  models.py  routes.py  schemas.py  service.py
backend/app/modules/platform/: __init__.py  routes.py  schemas.py  service.py
backend/app/modules/policies/: __init__.py  models.py  repository.py  routes.py  schemas.py  service.py
backend/app/modules/tenants/: __init__.py  models.py  repository.py  routes.py  schemas.py  service.py  settings_models.py  settings_routes.py  settings_schemas.py  settings_service.py
backend/app/shared/: __init__.py  models.py  repository.py  schemas.py
backend/data/policies/sample/: attendance_policy.md  benefits_policy.md  code_of_conduct.md  leave_policy.md
backend/tests/: conftest.py  test_api_functional.py  test_auth_integration.py  test_cache.py  test_employees_integration.py  test_policies_rag.py  test_rate_limit.py  test_token_blacklist.py
docs/: ai-agents.md  prd.md
frontend/: .cta.json  .dockerignore  .env.example  .prettierignore  Dockerfile  README.md  eslint.config.ts  index.html  (+5 more)
(+59 files in other folders)
