[project]
name = "samvit"
version = "0.1.0"
description = "AI-powered multi-tenant Human Resource Management System"
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.30.0",
    "bcrypt>=4.2.0",
    "chromadb>=1.3.5",
    "fastapi[standard]>=0.122.0",
    "langgraph>=1.0.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.9.0",
    "python-jose[cryptography]>=3.4.0",
    "qdrant-client>=1.16.1",
    "sqlalchemy[asyncio]>=2.0.44",
    "agent-framework-core>=1.0.0b251120,<2.0.0",
    "pillow>=12.0.0",
    "google-adk>=1.18.0",
    "pydantic-ai-slim[anthropic,fastmcp,google,groq,mcp,openai]>=1.24.0",
    "aiosqlite>=0.21.0",
    "redis>=5.2.0",
    "bleach>=6.2.0",
    "langgraph-checkpoint-postgres>=3.0.1",
    "psycopg-binary>=3.2.13",
]

[dependency-groups]
dev = [
    "coverage>=7.12.0",
    "httpx>=0.28.0",
    "mypy>=1.14.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.14.6",
]

[project.scripts]
dev = "fastapi:dev app/main.py"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestReturnNotNoneWarning",
]

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[tool.ruff]
target-version = "py310"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
    "T201",   # print statements are not allowed
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["T201"]  # Allow print statements in tests

[tool.coverage.run]
source = ["app"]
dynamic_context = "test_function"

[tool.coverage.report]
show_missing = true
sort = "-Cover"

[tool.coverage.html]
show_contexts = true
